<resources>
    <string name="accessories">Accessori</string>
    <string name="add_item">Aggiungi elemento</string>
    <string name="add_notepack_hint">Clicca sul pulsante \'+\' per aggiungere una Notepack</string>
    <string name="app_creator">Autore: Matteo Massaro</string>
    <string name="app_description">Crea le tue Notepacks per poter organizzare al meglio i tuoi viaggi!</string>
    <string name="app_name">Notepack</string>
    <string name="app_title_1">NOTE</string>
    <string name="app_title_2">PACK</string>
    <string name="app_version">Versione: 1.0.1</string>
    <string name="business_trip_notepack">Viaggio di lavoro</string>
    <string name="category">Categoria</string>
    <string name="clothes">Vestiti</string>
    <string name="custom_notepack">Personalizzata</string>
    <string name="electric_devices">Dispositivi elettronici</string>
    <string name="email">Email</string>
    <string name="english">Inglese</string>
    <string name="existing_notepack">Notepack già esistente</string>
    <string name="finances">Finanze</string>
    <string name="foods">Alimenti</string>
    <string name="french">Francese</string>
    <string name="german">Tedesco</string>
    <string name="health">Salute</string>
    <string name="item_deleted">Item eliminato</string>
    <string name="insert_item">Inserisci item</string>
    <string name="insert_title">Inserisci titolo</string>
    <string name="instagram">Instagram</string>
    <string name="italian">Italiano</string>
    <string name="items_taken_text">Items presi:\n</string>
    <string name="items_taken_text1">Items presi: </string>
    <string name="items_taken_text2">/</string>
    <string name="menu_create_notepack">Crea Notepack</string>
    <string name="menu_contacts">Contatti</string>
    <string name="menu_info">Info</string>
    <string name="menu_language">Lingua</string>
    <string name="menu_notepacks">Notepacks</string>
    <string name="my_notepacks">LE MIE NOTEPACKS</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="no">No</string>
    <string name="none">Nessuna</string>
    <string name="notepack_deleted">Notepack eliminata</string>
    <string name="notepack_saved">Notepack salvata</string>
    <string name="notepack_deleting_error">Errore nell\'eliminazione della Notepack</string>
    <string name="notepack_updated">Notepack aggiornata</string>
    <string name="database_error">Errore database</string>
    <string name="order">Ordina</string>
    <string name="order_by_category">Ordina per categoria</string>
    <string name="order_by_date">Ordina per data</string>
    <string name="order_by_title">Ordina per titolo</string>
    <string name="personal_hygiene">Igiene personale</string>
    <string name="save">Salva</string>
    <string name="school_trip_notepack">Viaggio d\'istruzione</string>
    <string name="shoes">Scarpe</string>
    <string name="spanish">Spagnolo</string>
    <string name="taken">Preso</string>
    <string name="vacation_notepack">Vacanza</string>
    <string name="warningMessage">Vuoi tornare indietro senza salvare?</string>
    <string name="warningTitle">Attenzione!</string>
    <string name="website">Sito web</string>
    <string name="yes">Si</string>
</resources>