<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutDialogContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/menu_dialog_background"
    android:orientation="vertical"
    android:padding="20dp">


    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotoslab_extrabold"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/menu_info"
        android:textColor="@color/pacific_blue_dark"
        android:textSize="30sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewAppInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="8dp"
        app:cardElevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageApp"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/app_name"
                    android:src="@mipmap/ic_launcher" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textAppName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/robotoslab_extrabold"
                        android:text="@string/app_name"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/textAppVersion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/robotoslab_extrabold"
                        android:text="@string/app_version"
                        android:textColor="?android:textColorPrimaryInverse"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/textAppCreator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/robotoslab_extrabold"
                        android:text="@string/app_creator"
                        android:textColor="?android:textColorPrimaryInverse"
                        android:textSize="15sp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textAppDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:fontFamily="@font/robotoslab_extrabold"
                android:text="@string/app_description"
                android:textSize="20sp" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>