<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/notaFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.notepack.CreateNotepackFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:minHeight="50dp"
        android:gravity="center"
        android:layout_marginEnd="40dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginEnd="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textSize="11sp"
                android:fontFamily="@font/robotoslab_extrabold"
                android:layout_gravity="center" />
            <ImageView
                android:id="@+id/categoryImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/category" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/insertTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@android:color/transparent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/robotoslab_extrabold"
            android:gravity="center"
            android:hint="@string/insert_title"
            android:inputType="textShortMessage"
            android:maxLines="1"
            android:maxLength="16"
            android:maxHeight="30dp"
            android:textSize="30sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <TextView
        android:id="@+id/itemsTakenText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/robotoslab_extrabold"
        android:gravity="center"
        android:textSize="11sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:background="@color/white"
        android:contentDescription="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/itemLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/notepack_item_background"
            android:divider="@drawable/notepack_items_divider"
            android:elevation="8dp"
            android:orientation="vertical"
            android:showDividers="middle">

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/createItemBtn"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:elevation="6dp"
            android:text="@string/add_item" />

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginStart="25dp"
            android:backgroundTint="@color/lime_green"
            android:elevation="6dp"
            android:text="@string/save" />

    </LinearLayout>

</LinearLayout>