<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/noteRelativeLayout">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/deleteItemBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:backgroundTint="@color/red"
        android:elevation="8dp"
        app:borderWidth="0dp"
        app:fabCustomSize="30dp"
        app:maxImageSize="20dp"
        app:srcCompat="@drawable/delete" />

    <LinearLayout
        android:id="@+id/selectCategoryLayout"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentLeft="true"
        android:layout_gravity="center"
        android:layout_marginStart="30dp">

        <TextView
            android:id="@+id/categoryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/category"
            android:textColor="@color/light_black"
            android:fontFamily="@font/robotoslab_variablefont_wght"
            android:paddingTop="10dp" />

        <Spinner
            android:id="@+id/selectCategorySpinner"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:paddingStart="10dp"
            android:paddingBottom="10dp"
            tools:ignore="SpeakableTextPresentCheck"
            android:gravity="center"
            android:layout_gravity="center"/>
    </LinearLayout>


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/insertItemText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/selectCategoryLayout"
        android:background="@android:color/transparent"
        android:fontFamily="@font/robotoslab_extrabold"
        android:gravity="center"
        android:hint="@string/insert_item"
        android:inputType="textMultiLine"
        android:maxWidth="178dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/light_black"
        android:textCursorDrawable="@drawable/cursor"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:paddingEnd="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/taken"
            android:textColor="@color/light_black"
            android:fontFamily="@font/robotoslab_variablefont_wght"
            android:paddingTop="10dp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchTaken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            tools:ignore="TouchTargetSizeCheck"
            android:thumb="@drawable/thumb"
            app:track="@drawable/track"
            android:paddingEnd="3dp"/>

    </LinearLayout>

</RelativeLayout>