<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutDialogContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/menu_dialog_background"
    android:orientation="vertical"
    android:padding="20dp">


    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotoslab_extrabold"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/menu_create_notepack"
        android:textColor="@color/pacific_blue_dark"
        android:textSize="30sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewVacation"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="6dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageVacation"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                android:contentDescription="@string/vacation_notepack"
                android:src="@drawable/vacation"/>

            <TextView
                android:id="@+id/textVacation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/robotoslab_extrabold"
                android:layout_gravity="center"
                android:text="@string/vacation_notepack"
                android:textSize="25sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewBusinessTrip"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="6dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/imageBusinessTrip"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                android:contentDescription="@string/business_trip_notepack"
                android:src="@drawable/business_trip"/>

            <TextView
                android:id="@+id/textBusinessTrip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/robotoslab_extrabold"
                android:layout_gravity="center"
                android:text="@string/business_trip_notepack"
                android:textSize="25sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewSchoolTrip"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="6dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
            android:id="@+id/layoutSchoolTrip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/imageSchoolTrip"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                android:contentDescription="@string/school_trip_notepack"
                android:src="@drawable/school_trip" />

            <TextView
                android:id="@+id/textSchoolTrip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/robotoslab_extrabold"
                android:layout_gravity="center"
                android:text="@string/school_trip_notepack"
                android:textSize="25sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewCustom"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="6dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/imageCustom"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                android:contentDescription="@string/custom_notepack"
                android:src="@drawable/custom"/>

            <TextView
                android:id="@+id/textCustom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/robotoslab_extrabold"
                android:layout_gravity="center"
                android:text="@string/custom_notepack"
                android:textSize="25sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>